<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0099cc"
    tools:context="com.arifian.bakingapp.FullscreenStepDetailActivity">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoPlayer_stepDetail_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:resize_mode="fill">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

</FrameLayout>
