<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arifian.bakingapp.fragments.StepListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_content_edge_margin_horizontal">
        <include
            android:id="@+id/layoutIngredient"
            layout="@layout/ingredient"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutIngredient"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:orientation="vertical">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
